--- a/inverjet_app/MDK-ARM/inverjet_app.uvprojx
+++ b/inverjet_app/MDK-ARM/inverjet_app.uvprojx
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../STM32MB/modbus/include;../STM32MB/port;../STM32MB/modbus/ascii;../STM32MB/modbus/rtu;../STM32MB/modbus/tcp;../Core/app;../Core/Thread;..\Core\fyld_mcu_sdk</IncludePath>
+              <IncludePath>../Core/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc;../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;../Middlewares/Third_Party/FreeRTOS/Source/include;../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;../Drivers/CMSIS/Device/ST/STM32F1xx/Include;../Drivers/CMSIS/Include;../STM32MB/modbus/include;../STM32MB/port;../STM32MB/modbus/ascii;../STM32MB/modbus/rtu;../STM32MB/modbus/tcp;../Core/app;../Core/Thread;../Core/fyld_mcu_sdk</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
