485协议更新 添加蓝牙测试，宏开启 电机开启不允许升级

--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -16,7 +16,7 @@ N103=0,恢复出厂,1000
 N3=A,AT+RESTORE
 
 N104=0,查询 名字,1000
-N4=A,AT+BLENAME?
+N4=A,AT+BLENAME=Anjie_ble
 
 N105=0,MAC,1000
 N5=A,AT+BLEMAC?
@@ -67,7 +67,7 @@ N120=0,连接,200
 N20=A,AT+BLECONNECT=94c9603993d7
 
 N121=0,21无注释,200
-N21=H,15 06 00 61 00 AA 5B 7F
+N21=A,15 06 00 61 00 AA 5B 7F
 
 N122=0,22无注释,1000
 N22=A,AT+BLESCAN
@@ -124,37 +124,37 @@ N139=0,断开,1000
 N39=A,AT+BLEDISAUTOCON
 
 N140=0,红,1000
-N40=A,
+N40=A,AT+BLEMAC=123456789876
 
 N141=0,绿,1000
-N41=A,
+N41=A,AT+BLECONNECT=c4d8d595a9aa
 
 N142=0,蓝,1000
-N42=A,
+N42=A,AT+BLECONNECT=94c960399489
 
-N143=1,43无注释,200
-N43=H,15 10 00 21 00 04 08 00 01 00 09 00 50 00 64
+N143=0,43无注释,200
+N43=A,
 
-N144=2,44无注释,200
-N44=H,15 10 00 21 00 04 08 00 00 00 09 00 40 00 00
+N144=0,44无注释,200
+N44=A,
 
-N145=3,45无注释,100
-N45=H,15 10 00 21 00 04 08 00 00 00 09 00 30 00 20
+N145=0,45无注释,100
+N45=A,
 
-N146=4,46无注释,100
-N46=H,15 10 00 21 00 04 08 00 00 00 03 00 20 00 00
+N146=0,46无注释,100
+N46=A,
 
-N147=5,47无注释,100
-N47=H,15 10 00 21 00 04 08 00 01 00 0C 00 160 00 00
+N147=0,47无注释,100
+N47=A,
 
-N148=6,48无注释,100
-N48=H,15 10 00 21 00 04 08 00 02 00 0C 00 58 00 00
+N148=0,48无注释,100
+N48=A,
 
-N149=7,49无注释,100
-N49=H,15 10 00 21 00 04 08 00 03 00 0C 00 25 00 00
+N149=0,49无注释,100
+N49=A,
 
-N150=8,50无注释,100
-N50=H,15 10 00 21 00 04 08 00 04 00 0C 00 38 00 00
+N150=0,50无注释,100
+N50=A,
 
 N151=0,51无注释,1000
 N51=A,
@@ -171,122 +171,122 @@ N54=A,15 01 00 00 00 01 BB BB
 N155=0,55无注释,1000
 N55=A,
 
-N156=9,56无注释,100
-N56=H,15 06 00 40 00 01
+N156=0,56无注释,100
+N56=A,
 
-N157=10,57无注释,100
-N57=H,15 06 00 40 00 02
+N157=0,57无注释,100
+N57=A,
 
-N158=11,58无注释,100
-N58=H,15 06 00 40 00 04
+N158=1,58无注释,1000
+N58=A,+++
 
-N159=12,59无注释,100
-N59=H,15 06 00 40 00 08
+N159=2,59无注释,1000
+N59=A,AT+RST\r\n
 
-N160=13,60无注释,100
-N60=H,15 06 00 40 00 02
+N160=3,60无注释,3000
+N60=A,AT+BLEMODE=1\r\n
 
-N161=14,61无注释,100
-N61=H,15 06 00 40 00 02
+N161=4,61无注释,3000
+N61=A,AT+BLECONNECT=123456789000\r\n
 
-N162=15,62无注释,100
-N62=H,15 06 00 40 00 01
+N162=5,62无注释,1000
+N62=A,+++
 
-N163=16,63无注释,100
-N63=H,15 06 00 40 00 08
+N163=0,63无注释,100
+N63=A,AT+BLEDISCON\r\n
 
-N164=17,64无注释,100
-N64=H,15 06 00 40 00 04
+N164=0,64无注释,100
+N64=A,
 
-N165=18,65无注释,100
-N65=H,15 06 00 40 00 08
+N165=0,65无注释,100
+N65=A,
 
-N166=19,66无注释,100
-N66=H,15 06 00 40 00 01
+N166=0,66无注释,100
+N66=A,
 
-N167=20,67无注释,100
-N67=H,15 06 00 40 00 04
+N167=0,67无注释,100
+N67=A,
 
-N168=21,68无注释,100
-N68=H,15 06 00 40 00 01
+N168=0,68无注释,100
+N68=A,
 
-N169=22,69无注释,100
-N69=H,15 06 00 40 00 08
+N169=0,69无注释,100
+N69=A,
 
-N170=23,70无注释,100
-N70=H,15 06 00 40 00 04
+N170=0,70无注释,100
+N70=A,
 
-N171=24,71无注释,100
-N71=H,15 06 00 40 00 01
+N171=0,71无注释,100
+N71=A,
 
-N172=25,72无注释,100
-N72=H,15 06 00 40 00 04
+N172=0,72无注释,100
+N72=A,
 
-N173=26,73无注释,100
-N73=H,15 06 00 40 00 08
+N173=0,73无注释,100
+N73=A,
 
-N174=27,74无注释,100
-N74=H,15 06 00 40 00 04
+N174=0,74无注释,100
+N74=A,
 
-N175=28,75无注释,100
-N75=H,15 06 00 40 00 08
+N175=0,75无注释,100
+N75=A,
 
-N176=29,76无注释,100
-N76=H,15 06 00 40 00 02
+N176=0,76无注释,100
+N76=A,
 
-N177=30,77无注释,100
-N77=H,15 06 00 40 00 02
+N177=0,77无注释,100
+N77=A,
 
-N178=31,78无注释,100
-N78=H,15 06 00 40 00 08
+N178=0,78无注释,100
+N78=A,
 
-N179=32,79无注释,100
-N79=H,15 06 00 40 00 04
+N179=0,79无注释,100
+N79=A,
 
-N180=33,80无注释,100
-N80=H,15 06 00 40 00 08
+N180=0,80无注释,100
+N80=A,
 
-N181=34,81无注释,100
-N81=H,15 06 00 40 00 01
+N181=0,81无注释,100
+N81=A,
 
-N182=35,82无注释,100
-N82=H,15 06 00 40 00 01
+N182=0,82无注释,100
+N82=A,
 
-N183=36,83无注释,100
-N83=H,15 06 00 40 00 08
+N183=0,83无注释,100
+N83=A,
 
-N184=37,84无注释,100
-N84=H,15 06 00 40 00 04
+N184=0,84无注释,100
+N84=A,
 
-N185=38,85无注释,100
-N85=H,15 06 00 40 00 08
+N185=0,85无注释,100
+N85=A,
 
-N186=39,86无注释,100
-N86=H,15 06 00 40 00 01
+N186=0,86无注释,100
+N86=A,
 
-N187=40,87无注释,100
-N87=H,15 06 00 40 00 01
+N187=0,87无注释,100
+N87=A,
 
-N188=41,88无注释,100
-N88=H,15 06 00 40 00 02
+N188=0,88无注释,100
+N88=A,
 
-N189=42,89无注释,100
-N89=H,15 06 00 40 00 01
+N189=0,89无注释,100
+N89=A,
 
-N190=43,90无注释,100
-N90=H,15 06 00 40 00 01
+N190=0,90无注释,100
+N90=A,
 
-N191=44,91无注释,100
-N91=H,15 06 00 40 00 08
+N191=0,91无注释,100
+N91=A,
 
-N192=45,92无注释,100
-N92=H,15 06 00 40 00 08
+N192=0,92无注释,100
+N92=A,
 
-N193=46,93无注释,100
-N93=H,15 06 00 40 00 02
+N193=0,93无注释,100
+N93=A,
 
-N194=47,94无注释,100
-N94=H,15 06 00 40 00 02
+N194=0,94无注释,100
+N94=A,
 
 N195=0,95无注释,1000
 N95=A,
@@ -308,23 +308,23 @@ N1051=,1
 ;打开文件地址和名称
 N1052=,
 ;主面板ASC字符串
-N1053=,+++
+N1053=,15 10 00 21 00 04 08 00 00 00 01 00 60 00 0A
 ;主面板HEX数据串
-N1054=,15 06 00 62 00 AA
+N1054=,15 10 00 21 00 04 08 00 00 00 01 00 60 00 0A
 ;主面板发送方式(ASC or HEX)
-N1055=,H
+N1055=,A
 ;主面板字符串发送间隔时间ms
 N1056=,500
 ;主面板字符串发送新行
 N1057=,Y
 ;多条字符串发送间隔时间ms
-N1058=,100
+N1058=,3000
 ;接收窗口是否HEX显示方式
-N1059=,Y
+N1059=,N
 ;校验方式,0=None，1=modbusCRC16，2=ADD，3=XOR
-N1060=,1
+N1060=,0
 ;保存DTR:
-N1061=,Y
+N1061=,N
 ;保存RTS:
 N1062=,Y
 ;程序启动时是否打开串口
@@ -354,15 +354,15 @@ N1074=,1
 ;当前串口号Port=COMX,网络模式):1=TCPCLIENT,2=TCPSERVER,3=UDP
 N1080=,COM5
 ;波特率Band rate
-N1081=,9600
+N1081=,115200
 ;保存窗口宽度
-N1082=,963
+N1082=,952
 ;保存窗口高度
-N1083=,608
+N1083=,751
 ;保存窗口left
-N1084=,405
+N1084=,28
 ;保存窗口top
-N1085=,223
+N1085=,56
 ;分割线位置
 N1086=,471
 ;多条命令的宽度
