--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -43,7 +43,7 @@ N112=0,12无注释,1000
 N12=A,AT+BLECONINTV=99100401
 
 N113=0,13无注释,1000
-N13=A,AT+BLEMODE=1
+N13=A,AT+BLEMODE=0
 
 N114=0,14无注释,1000
 N14=A,AT+BLEADVDATA=0011223344556677
@@ -202,7 +202,7 @@ N165=0,65无注释,100
 N65=A,
 
 N166=0,66无注释,100
-N66=A,
+N66=A,AT+BLECONNECT=2a0798017a02
 
 N167=0,67无注释,100
 N67=A,
@@ -308,15 +308,15 @@ N1051=,1
 ;打开文件地址和名称
 N1052=,
 ;主面板ASC字符串
-N1053=,15 10 00 21 00 04 08 00 00 00 01 00 60 00 0A
+N1053=,01
 ;主面板HEX数据串
-N1054=,15 10 00 21 00 04 08 00 00 00 01 00 60 00 0A
+N1054=,15 03 00 50 00 01
 ;主面板发送方式(ASC or HEX)
 N1055=,A
 ;主面板字符串发送间隔时间ms
 N1056=,500
 ;主面板字符串发送新行
-N1057=,Y
+N1057=,N
 ;多条字符串发送间隔时间ms
 N1058=,3000
 ;接收窗口是否HEX显示方式
@@ -360,9 +360,9 @@ N1082=,952
 ;保存窗口高度
 N1083=,751
 ;保存窗口left
-N1084=,28
+N1084=,552
 ;保存窗口top
-N1085=,56
+N1085=,85
 ;分割线位置
 N1086=,471
 ;多条命令的宽度
