--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -43,7 +43,7 @@ N112=0,12无注释,1000
 N12=A,AT+BLECONINTV=99100401
 
 N113=0,13无注释,1000
-N13=A,AT+BLEMODE=0
+N13=A,AT+BLEMODE=
 
 N114=0,14无注释,1000
 N14=A,AT+BLEADVDATA=0011223344556677
@@ -73,10 +73,10 @@ N122=0,22无注释,1000
 N22=A,AT+BLESCAN
 
 N123=0,23无注释,1000
-N23=A,AT+BLECONNECT=123456789012
+N23=A,AT+BLECONNECT=123456789000
 
 N124=0,24无注释,1000
-N24=A,AT+BLEAUTOCON=123456789012false
+N24=A,AT+BLEAUTOCON=123456789000
 
 N125=0,25无注释,1000
 N25=A,AT+BLEDISCON
@@ -139,7 +139,7 @@ N144=0,44无注释,200
 N44=A,
 
 N145=0,45无注释,100
-N45=A,
+N45=A,AT+BLESCAN=123456789000
 
 N146=0,46无注释,100
 N46=A,
@@ -151,7 +151,7 @@ N148=0,48无注释,100
 N48=A,
 
 N149=0,49无注释,100
-N49=A,
+N49=A,AT+HELP
 
 N150=0,50无注释,100
 N50=A,
@@ -180,16 +180,16 @@ N57=A,
 N158=1,58无注释,1000
 N58=A,+++
 
-N159=2,59无注释,1000
+N159=0,59无注释,2000
 N59=A,AT+RST\r\n
 
-N160=3,60无注释,3000
+N160=2,60无注释,4000
 N60=A,AT+BLEMODE=1\r\n
 
-N161=4,61无注释,3000
+N161=3,61无注释,2000
 N61=A,AT+BLECONNECT=123456789000\r\n
 
-N162=5,62无注释,1000
+N162=0,62无注释,1000
 N62=A,+++
 
 N163=0,63无注释,100
@@ -316,9 +316,9 @@ N1055=,A
 ;主面板字符串发送间隔时间ms
 N1056=,500
 ;主面板字符串发送新行
-N1057=,N
+N1057=,Y
 ;多条字符串发送间隔时间ms
-N1058=,3000
+N1058=,1000
 ;接收窗口是否HEX显示方式
 N1059=,N
 ;校验方式,0=None，1=modbusCRC16，2=ADD，3=XOR
@@ -360,9 +360,9 @@ N1082=,952
 ;保存窗口高度
 N1083=,751
 ;保存窗口left
-N1084=,552
+N1084=,631
 ;保存窗口top
-N1085=,85
+N1085=,111
 ;分割线位置
 N1086=,471
 ;多条命令的宽度
