--- a/tools/com_tool/sscom51.ini
+++ b/tools/com_tool/sscom51.ini
@@ -300,8 +300,8 @@ N97=A,
 N198=98,零线电流 高,1000
 N98=H,AA 04 00 2E 00 01
 
-N199=99,99无注释,1000
-N99=H,AA 04 00 2F 00 01
+N199=99,新驱动板,1000
+N99=H,05 00 00 00 00 00 00 00 00 00 00 00 FA
 
 ;发送文件时每256字节延时时间ms
 N1051=,100
@@ -310,11 +310,11 @@ N1052=,C:\Users\wqg\Desktop\File1
 ;主面板ASC字符串
 N1053=,05 00 2B 0A 0B 0C 01 20 00 FF 00 00
 ;主面板HEX数据串
-N1054=,15 03 00 60 00 03
+N1054=,05 00 00 00 00 00 00 00 00 00 00 00 FA
 ;主面板发送方式(ASC or HEX)
 N1055=,H
 ;主面板字符串发送间隔时间ms
-N1056=,200
+N1056=,1000
 ;主面板字符串发送新行
 N1057=,N
 ;多条字符串发送间隔时间ms
@@ -358,11 +358,11 @@ N1081=,115200
 ;保存窗口宽度
 N1082=,1088
 ;保存窗口高度
-N1083=,591
+N1083=,561
 ;保存窗口left
-N1084=,295
+N1084=,262
 ;保存窗口top
-N1085=,160
+N1085=,218
 ;分割线位置
 N1086=,435
 ;多条命令的宽度
