--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -43,7 +43,7 @@ N112=0,12ÎÞ×¢ÊÍ,1000
 N12=A,AT+BLECONINTV=99100401
 
 N113=0,13ÎÞ×¢ÊÍ,1000
-N13=A,AT+BLEMODE=
+N13=A,AT+BLEMODE=1
 
 N114=0,14ÎÞ×¢ÊÍ,1000
 N14=A,AT+BLEADVDATA=0011223344556677
@@ -73,7 +73,7 @@ N122=0,22ÎÞ×¢ÊÍ,1000
 N22=A,AT+BLESCAN
 
 N123=0,23ÎÞ×¢ÊÍ,1000
-N23=A,AT+BLECONNECT=123456789000
+N23=A,AT+BLECONNECT=12345678901
 
 N124=0,24ÎÞ×¢ÊÍ,1000
 N24=A,AT+BLEAUTOCON=123456789000
