--- a/inverjet_app/MDK-ARM/inverjet_app.uvprojx
+++ b/inverjet_app/MDK-ARM/inverjet_app.uvprojx
@@ -83,7 +83,7 @@
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>1</RunUserProg2>
             <UserProg1Name>fromelf --bin --output=.\output\inverjet_app.bin .\output\inverjet_app.axf</UserProg1Name>
-            <UserProg2Name></UserProg2Name>
+            <UserProg2Name>..\Tools\after_build_script.exe</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopA1X>0</nStopA1X>
@@ -1141,6 +1141,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\app\model_parameter.c</FilePath>
             </File>
+            <File>
+              <FileName>down_conversion.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\app\down_conversion.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1217,14 +1222,14 @@
               <FilePath>..\Core\fyld_mcu_sdk\protocol.h</FilePath>
             </File>
             <File>
-              <FileName>readme.txt</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\Core\fyld_mcu_sdk\readme.txt</FilePath>
-            </File>
-            <File>
               <FileName>system.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Core\fyld_mcu_sdk\system.c</FilePath>
+            </File>
+            <File>
+              <FileName>readme.txt</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Core\fyld_mcu_sdk\readme.txt</FilePath>
             </File>
             <File>
               <FileName>system.h</FileName>
