--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -16,10 +16,10 @@ N103=0,恢复出厂,1000
 N3=A,AT+RESTORE
 
 N104=0,查询 名字,1000
-N4=A,AT+BLENAME=Anjie_ble
+N4=A,AT+BLENAME=ab
 
 N105=0,MAC,1000
-N5=A,AT+BLEMAC?
+N5=A,AT+BLENAME
 
 N106=0,连接 状态,1000
 N6=A,AT+BLESTATE?
@@ -43,10 +43,10 @@ N112=0,12无注释,1000
 N12=A,AT+BLECONINTV=99100401
 
 N113=0,13无注释,1000
-N13=A,AT+BLEMODE=1
+N13=A,AT+BLEMODE=0
 
 N114=0,14无注释,1000
-N14=A,AT+BLEADVDATA=0011223344556677
+N14=A,AT+BLEADVDATA=123456789876
 
 N115=0,关闭 广播,200
 N15=A,AT+BLEADVEN=0
@@ -64,7 +64,7 @@ N119=0,19无注释,200
 N19=A,AT+BLESERUUID?
 
 N120=0,连接,200
-N20=A,AT+BLECONNECT=94c9603993d7
+N20=A,AT+BLECONNECT=94c960dc5890
 
 N121=0,21无注释,200
 N21=A,15 06 00 61 00 AA 5B 7F
@@ -154,16 +154,16 @@ N149=0,49无注释,100
 N49=A,AT+HELP
 
 N150=0,50无注释,100
-N50=A,
+N50=A,AT+BLE_PAIRMODE=1
 
-N151=0,51无注释,1000
-N51=A,
+N151=0,允许配对,1000
+N51=A,AT+PAIRINGMODE=1
 
 N152=0,52无注释,1000
-N52=A,
+N52=A,AT+BLE_SECURITY=0
 
-N153=0,开始升级  ,1000
-N53=A,15 01 00 00 C5 AE ED F2
+N153=0,广播间隙,1000
+N53=A,AT+BLEADVINTV=160
 
 N154=0,升级结束,1000
 N54=A,15 01 00 00 00 01 BB BB
@@ -172,21 +172,21 @@ N155=0,55无注释,1000
 N55=A,
 
 N156=0,56无注释,100
-N56=A,
+N56=A,AT+PROVISION
 
 N157=0,57无注释,100
 N57=A,
 
-N158=1,58无注释,1000
+N158=0,58无注释,1000
 N58=A,+++
 
 N159=0,59无注释,2000
 N59=A,AT+RST\r\n
 
-N160=2,60无注释,4000
+N160=0,60无注释,4000
 N60=A,AT+BLEMODE=1\r\n
 
-N161=3,61无注释,2000
+N161=0,61无注释,2000
 N61=A,AT+BLECONNECT=123456789000\r\n
 
 N162=0,62无注释,1000
@@ -211,28 +211,28 @@ N168=0,68无注释,100
 N68=A,
 
 N169=0,69无注释,100
-N69=A,
+N69=A,AT+BLENAME=inverjet
 
 N170=0,70无注释,100
-N70=A,
+N70=A,AT+BLEMODE?
 
 N171=0,71无注释,100
-N71=A,
+N71=A,AT+BLEMTU=243
 
 N172=0,72无注释,100
-N72=A,
+N72=A,AT+BLERFPWR?
 
 N173=0,73无注释,100
-N73=A,
+N73=A,AT+BLEADVINTV=160
 
 N174=0,74无注释,100
-N74=A,
+N74=A,AT+BLEAUTH=123456
 
 N175=0,75无注释,100
-N75=A,
+N75=A,AT+RST
 
 N176=0,76无注释,100
-N76=A,
+N76=A,AT+BLEADVDATA=123456789876
 
 N177=0,77无注释,100
 N77=A,
@@ -241,25 +241,25 @@ N178=0,78无注释,100
 N78=A,
 
 N179=0,79无注释,100
-N79=A,
+N79=A,AT+BLEAUTH=DISABLE
 
 N180=0,80无注释,100
-N80=A,
+N80=A,AT+BLEAUTH?
 
 N181=0,81无注释,100
-N81=A,
+N81=A,AT+BLEADVINTV?
 
 N182=0,82无注释,100
-N82=A,
+N82=A,ATE1
 
-N183=0,83无注释,100
-N83=A,
+N183=1,83无注释,70
+N83=H,15 04 00 40 00 05
 
-N184=0,84无注释,100
-N84=A,
+N184=2,84无注释,70
+N84=H,15 06 00 40 00 08
 
 N185=0,85无注释,100
-N85=A,
+N85=A,15 06 00 40 00 08
 
 N186=0,86无注释,100
 N86=A,
@@ -308,9 +308,9 @@ N1051=,1
 ;打开文件地址和名称
 N1052=,
 ;主面板ASC字符串
-N1053=,01
+N1053=,AT+BLEADVDATA=Allow pairing
 ;主面板HEX数据串
-N1054=,15 03 00 50 00 01
+N1054=,15 04 00 40 00 05 32 C9
 ;主面板发送方式(ASC or HEX)
 N1055=,A
 ;主面板字符串发送间隔时间ms
@@ -318,7 +318,7 @@ N1056=,500
 ;主面板字符串发送新行
 N1057=,Y
 ;多条字符串发送间隔时间ms
-N1058=,1
+N1058=,70
 ;接收窗口是否HEX显示方式
 N1059=,N
 ;校验方式,0=None，1=modbusCRC16，2=ADD，3=XOR
@@ -352,17 +352,17 @@ N1073=,N
 ;第几字节至末尾加校验
 N1074=,1
 ;当前串口号Port=COMX,网络模式):1=TCPCLIENT,2=TCPSERVER,3=UDP
-N1080=,
+N1080=,COM7
 ;波特率Band rate
 N1081=,115200
 ;保存窗口宽度
 N1082=,792
 ;保存窗口高度
-N1083=,600
+N1083=,705
 ;保存窗口left
-N1084=,250
+N1084=,594
 ;保存窗口top
-N1085=,180
+N1085=,114
 ;分割线位置
 N1086=,365
 ;多条命令的宽度
