--- a/tools/蓝牙模块/com_tool/sscom51.ini
+++ b/tools/蓝牙模块/com_tool/sscom51.ini
@@ -16,7 +16,7 @@ N103=0,恢复出厂,1000
 N3=A,AT+RESTORE
 
 N104=0,查询 名字,1000
-N4=A,AT+BLENAME=ab
+N4=A,AT+BLENAME=inverje
 
 N105=0,MAC,1000
 N5=A,AT+BLENAME
